found js error with extra perin may be cause of add payment???

--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -63,28 +63,11 @@
       <%= f.text_field :groom_email,:size => "25" %>
     </div> 
      
-
-  </div>
-  <div class = "row">
-    <div class = "col-md-3 well">
-           Photo
-            <%= image_tag(@wedding.image_file.url, size: "160x200 >", class: "gravatar") if @wedding.image_file? %>
-      <span class = "picture" >
-        <%= f.file_field :image_file, accept: "image/jpeg, image/gif, image/png" %>
-
-      </span>
-    </div>
-    <div class = 'col-md-9'>
-      comments<br>
-      <%= f.text_area :comments ,cols: 100 , rows: 10 %>
-    </div>
- </div>
-    
- 
-  
-  <br/>
-
-  Web date <%= @wedding.web_date %>
+  <br><br>
+  </div class="wedding-with-line">
+   <% if @wedding.web_date.present? %>
+      Web date <%= @wedding.web_date %>
+  <% end %>
   <div class = "row" id = "location">
     <div class = "col-sm-5">
       <%= f.label :location, "location" %>
@@ -99,7 +82,7 @@
              <%= f.time_select  :wedding_time, {minute_step: 30, ampm: true}   %>      
 <!-- -->
     </div>
-  </div><br> 
+  </div><br>
   
     Rehearsal
       <%=  f.check_box  :rehearsal ,class: "checkbox-inline" %> 
@@ -123,6 +106,26 @@
    
   </div>
   <br />
+  <div class = "row">
+    <div class = "col-md-3 well">
+           Photo
+            <%= image_tag(@wedding.image_file.url, size: "160x200 >", class: "gravatar") if @wedding.image_file? %>
+      <span class = "picture" >
+        <%= f.file_field :image_file, accept: "image/jpeg, image/gif, image/png" %>
+
+      </span>
+    </div>
+    <div class = 'col-md-9'>
+      comments<br>
+      <%= f.text_area :comments ,cols: 100 , rows: 10 %>
+    </div>
+ </div>
+    
+ 
+  
+  <br/>
+
+  
   
   <!-- naw add the cost factors-->
   <div class="field last-item"> Wedding type &nbsp &nbsp
@@ -285,7 +288,7 @@
 <!-- here is the end -->
 <script type="text/javascript">
   $("#cwedding_image_file").bind("change", function() {
-    size_in)megabytes = this.files[0].size/1024/1024;
+    size_in megabytes = this.files[0].size/1024/1024;
     if (size_in_megabytes > 5){
       alert("Maximum size for file is 5MB. Please chose a smaller file");
       
