--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -286,7 +286,7 @@
   
 <% end %>
 <!-- here is the end -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $("#cwedding_image_file").bind("change", function() {
     size_in megabytes = this.files[0].size/1024/1024;
     if (size_in_megabytes > 5){
@@ -295,6 +295,6 @@
     }
   });
   
-</script>
+</script> -->
     
    
