--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Payments#edit</h1>
-<p>Find me in app/views/payments/edit.html.erb</p>
+<p class = 'last-item'><b>  Edit payment for</b> <%= @wedding.get_title %> <br /></p>
+<%= render "form" %>
+<%= link_to 'Back', edit_wedding_path(@wedding) %>
