--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -19,9 +19,7 @@
    <div class="form-actions">
     
     <%= f.submit "Save", class: 'btn btn-success' %>
-  </div><br />
-  
-  <br />
+  </div>
   <div class = "row" id = "brideC">
    
     <div class = "col-sm-3 ">
@@ -149,47 +147,33 @@
       
     <div class = "field last-item">
       <!-- <div class = "col col-sml-3"> -->
-        <%= f.label :wedding_cost %>
-        <%= number_to_currency(f.text_field :wedding_cost) %>
-        <%= f.label :other_cost %>
-        <%= number_to_currency(f.text_field :other_cost) %>
-        <%= f.label :referal_fee, "Referal Fee" %>
-        <%= number_to_currency(f.text_field :referal_fee) %>
-
-      <!-- </div> -->
-
+       
+      <%= f.label :wedding_cost %>
+      <%= number_to_currency(f.text_field :wedding_cost,:size  => "8" ) %>
+      <%= f.label :other_cost %>
+      <%= number_to_currency(f.text_field :other_cost,:size  => "8" ) %>
+      <%= f.label :referal_fee, "Referal Fee" %>
+      <%= number_to_currency(f.text_field :referal_fee,:size  => "8" ) %>
+      Wedding total cost &nbsp&nbsp<b><%= number_to_currency(@wedding.wedding_cost + @wedding.other_cost) %></b>
     </div>
     <!-- <section id = "payments-section"> -->
  
  
-     <div>
-      
-        <%= link_to 'Add Payment',
-          wedding_payments_path(@wedding, { 
-            payment: {
-              pmt_date: '' ,
-              pmt_amount: 0,
-              pmt_type: '',
-              pmt_method: '',
-              reference: ''
-            }
-          }),
-          method: :post,
-          remote: true, 
-          class: "btn btn-default btn-info"
-        %>
-  
-      
-      </div>
-
-      <div id="show-pmt">
-        <%= render 'weddings/payments_list' %>
-      </div>
+     
 
    
-  <p><b>
-     Payment totals &nbsp
-    <%= number_to_currency(@wedding.payments.sum(:pmt_amount)) %></b>
+  <p><b> Payments: 
+    <%= @wedding.payments.count %> totaling &nbsp
+    <%= number_to_currency(@wedding.payments.sum(:pmt_amount)) %></b>&nbsp &nbsp
+    <%= link_to new_wedding_payment_path(@wedding) do %>  
+    <span class = "btn btn-sm btn-primary">Add Payment</span>&nbsp &nbsp
+    <% end %> 
+    <b>Balance Due = <%= number_to_currency((@wedding.wedding_cost + @wedding.other_cost) -  @wedding.payments.sum(:pmt_amount)) %></b>
+
+    <% @wedding.payments.each do |pmt| %>
+    <p>
+      <%= link_to 'edit ' + pmt.pmt_type + ' on ' + pmt.pmt_date.to_s+ ' for '+ number_to_currency(pmt.pmt_amount).to_s, edit_wedding_payment_path(@wedding, pmt) %></p>
+    <% end %>
   </p>
  
     <!-- now add email history -->
@@ -286,6 +270,8 @@
           </table>
   
 <% end %>
+
+
 <!-- here is the end -->
 <!-- <script type="text/javascript">
   $("#cwedding_image_file").bind("change", function() {
