--- a/app/views/weddings/edit.html.erb
+++ b/app/views/weddings/edit.html.erb
@@ -1,5 +1,5 @@
-<b>Editing Wedding</b> 
-&nbsp&nbsp  <%= @wedding.get_title %> <hr>
+<b>Editing Wedding
+&nbsp&nbsp  <%= @wedding.get_title %></b>  <hr>
 	<% if @user.admin? %>
 		<%= render 'admin_form' %>
 	<% else %>
