--- a/app/views/weddings/_admin_form.html.erb
+++ b/app/views/weddings/_admin_form.html.erb
@@ -109,7 +109,7 @@
   </div> -->
   <br />
   
-  <!-- naw add the cost factors-->Wedding size &nbsp &nbsp
+  <!-- naw add the cost factors-->Wedding size &nbsp &nbsp <%= @wedding.web_count %>
   
     
 
