minor changes for cosmetic and print

--- a/app/views/inquiries/index.html.erb
+++ b/app/views/inquiries/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 
-<div class = "container" >
+<div class = "container media" >
   <h1>Requests</h1>  
   
   <table>
