--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -19,7 +19,7 @@
 <% end %>
  <%= link_to "Custom Search",new_search_path %><br>
 <%= link_to 'New Wedding', new_wedding_path %>
- <div class = "container" id = "windex">
+ <div class = "container media" id = "windex">
   <table>
     <thead>
       <tr>
@@ -65,7 +65,7 @@
 
         <td>
         
-          <%=  link_to  "Assign", new_wedding_inquiry_path(wedding) %>
+          <%=  link_to  "Assign", new_wedding_inquiry_path(wedding)  %>
        </td>
      <% end %>
      <td>
