--- a/app/views/inquiries/index.html.erb
+++ b/app/views/inquiries/index.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-
 <div class = "container" >
-  <h1>Requests</h1>  
+  <h1 >Requests</h1>  
   
   <table>
     <thead>
@@ -10,7 +9,7 @@
         <th width = 350px>Wedding </th>
         <th width = 110p>Phone</th>
         <th width = 110p>email sent date</th>
-        <th width = 250p>Location</th>
+        <th width = 290p>Location</th>
         
        
         
@@ -22,8 +21,13 @@
         <tr>
           <td> <%=  link_to  inquiry.wedding.get_title, edit_inquiry_path(inquiry) %></td>
         
-          <td><%= inquiry.wedding.bride_phone %></td>
-           <td><%= inquiry.email_sent_date %></td>
+          <td><%= inquiry.wedding.bride_phone  %></td>
+
+            
+            <td > <%= inquiry.email_sent_date %>
+              <% if inquiry.intro_meeting? %><span class="glyphicon glyphicon-ok meeting"></span><% end %>
+            </td>
+          
           <td><%= inquiry.wedding.location%></td>
           
   
