error in index if admin login syntax corected

--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -29,9 +29,9 @@
 
     <tbody>
  
-    <tr align = "left" text-color = "red">
+    <tr align = "left" >
         <% if @user.admin? %>
-          <th width = 80px>
+          <th width ='80px' >
             Go To
           <% end %> 
         </th>
