--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -192,7 +192,7 @@
             if (response.ok) {
               response.json().then(function (data) {
 
-                var emailBody =  '<%= @wedding.email_salutation %>' +',' + data.body + '\n\n' + userSignature
+                var emailBody =  '<%= @wedding.email_salutation %>'  + data.body + '\n\n' + userSignature
                 
 
                 var mailTo = "mailto:" + emailTo + 
