--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,3 +1,3 @@
-<p class = 'last-item'><b>  Edit payment for</b> <%= @wedding.get_title %> <br /></p>
+<p class = 'last-item'><b>  Edit payment for</b> <%= @payment.wedding.get_title %> <br /></p>
 <%= render "form" %>
-<%= link_to 'Back', edit_wedding_path(@wedding) %>
+<%= link_to 'Back', edit_wedding_path(@payment.wedding) %>
