changed payments to look for payment object for title

--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @payment  do |f| -%>
+<%= form_for [ @wedding, @payment]  do |f| -%>
 
 <div ><%= f.submit "Save", :class => "btn btn-sm  btn-success"%></div><br />
 <table>
