add inverse_of and debug traces

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,4 +1,4 @@
-<p class = 'last-item'><b>  Add payment for</b> <%= @payment.wedding.get_title %> <br /></p>
+<p class = 'last-item'><b>  Add payment for</b> <%= @payment.wedding.get_title %> </p><br>
 
 <div class = 'container'>
 	<p> Pervious payments
