--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,3 +1,8 @@
-<p class = 'last-item'><b>  Edit payment for</b> <%= @payment.wedding.get_title %> <br /></p>
-<%= render "form" %>
-<%= link_to 'Back', edit_wedding_path(@payment.wedding) %>
+<div>
+PAYMENT:
+<%= @payment.inspect %>
+</div>
+
+<p class = 'last-item'><b>  Edit payment for</b> <%#= @payment.wedding.get_title %> <br /></p>
+<%#= render "form" %>
+<%#= link_to 'Back', edit_wedding_path(@payment.wedding) %>
