--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,8 +1,26 @@
 <div>
-PAYMENT:
+Payment:
 <%= @payment.inspect %>
 </div>
 
+<br/><br/>
+
+<div>
+Wedding:
+<%= @wedding.inspect %>
+</div>
+
+<br/><br/>
+
+<div>
+Params:
+<%= params.inspect %><br/>
+id: <%= params[:id] %><br/>
+wedding_id: <%= params[:wedding_id] %><br/>
+</div>
+
+<!--
 <p class = 'last-item'><b>  Edit payment for</b> <%#= @payment.wedding.get_title %> <br /></p>
 <%#= render "form" %>
 <%#= link_to 'Back', edit_wedding_path(@payment.wedding) %>
+-->
