added counseling to wedding still need requests

--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -83,7 +83,9 @@
   </div><br>
   
     Rehearsal
-      <%=  f.check_box  :rehearsal ,class: "checkbox-inline" %> 
+      <%=  f.check_box  :rehearsal , class: "checkbox-inline" %> &nbsp &nbsp
+      Counseling <%= f.check_box :counseling, class: "checkbox-inline" %> 
+
  <br/><br/>
   <div class = "row", id="wedding-with-line" >
     
