added admin update to assighned request to another officiant

--- a/app/views/inquiries/edit.html.erb
+++ b/app/views/inquiries/edit.html.erb
@@ -1,5 +1,10 @@
 <b>Editing Inquiry</b>  <%= @inquiry.wedding.get_title %> <br />
 
-<%= render 'form', inquiry: @inquiry %>
+<% if @user.admin? %>
+	<%= render 'admin_form', inquiry: @inquiry %>
+<% else %>
+	<%= render 'form', inquiry: @inquiry %>
+
+<% end %>
 
 <%= link_to 'Back', inquiries_path %>
