--- a/app/views/weddings/_admin_form.html.erb
+++ b/app/views/weddings/_admin_form.html.erb
@@ -16,9 +16,20 @@
   
 
 <div class = "container-fluid">
-  <div class="actions">
-    <%= f.submit "Save",  class: 'btn btn-success' %>
-  </div> 
+  <div class = 'row' >
+    <div class = 'col-sm-3'>
+      <div class="actions">
+        <%= f.submit "Save",  class: 'btn btn-success' %>
+
+      </div> 
+
+    </div>
+    <div class = 'col-sm-3'>
+      <% if @wedding.inquiries.count > 0 %>
+        <%= link_to "re-asign officiant", edit_inquiry_path(@wedding.inquiries.first) %>
+      <% end %>
+    </div>
+  </div>
   <br />
   <div class = "row" id = "brideC">
     <div class = "col-sm-3 ">
