--- a/app/views/weddings/_admin_form.html.erb
+++ b/app/views/weddings/_admin_form.html.erb
@@ -28,7 +28,12 @@
       <% @inq = @wedding.inquiries.first %>
         <% if @inq.closed = :isopen %>
         <div class = 'col-sm-2'>
-          Assignd to <%= User.find(@inq.user_id).first_name %>  
+          Assignd to
+          <% if @inq.user_id == nil %>
+            <%= "No-One" %>
+          <% else %> 
+            <%= User.find(@inq.user_id).first_name %>
+          <% end %>  
         </div>
         
         <div class = 'col-sm-2'>
