allowing for finding and filter user requests for admin

--- a/app/views/weddings/_admin_form.html.erb
+++ b/app/views/weddings/_admin_form.html.erb
@@ -28,7 +28,7 @@
       <% @inq = @wedding.inquiries.first %>
         <% if @inq.closed = :isopen %>
         <div class = 'col-sm-2'>
-          Assignd to
+          Assigned to
           <% if @inq.user_id == nil %>
             <%= "No-One" %>
           <% else %> 
