--- a/app/views/inquiries/index.html.erb
+++ b/app/views/inquiries/index.html.erb
@@ -29,7 +29,7 @@
 
     <%= hidden_field_tag :search, params[:search] %> 
 
-    <%= submit_tag "Limt Officiant" %>
+    <%= submit_tag "Limit Officiant" %>
   <% end %> 
 <% end %>
   
