--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -137,7 +137,7 @@
         </div>
        
         <div class = "col col-sm-2" >
-          <%= link_to book_wedding_inquiry_path(@inquiry) ,  method: :post  do  %>
+          <%= link_to book_wedding_inquiry_path(@inquiry) ,  method: :post,data: { confirm: 'Have you saved all your changes?' }  do  %>
             <span class ="btn btn-default btn-info"> Book </span>
           <% end %>
         </div>
