added header to email preview

--- a/app/views/email_templates/preview.html.erb
+++ b/app/views/email_templates/preview.html.erb
@@ -23,7 +23,7 @@
         "&body=" + encodeURIComponent(emailBody).replace(/%26%2339%3B/g, "%27")
        // alert(mailo);
       mailButton = document.getElementById("sendEmailPreview")
-      mailButton.href = "Content-Type='text/html;' + mailTo
+      mailButton.href = 'Content-Type='text/html;' + mailTo
 
        var str = "this I'd like".replace(/'/g, "%27")
 
